fix form display on mobile

--- a/app/[locale]/form/form.css
+++ b/app/[locale]/form/form.css
@@ -21,5 +21,5 @@
   backdrop-filter: blur(12px);
   margin: 2rem auto 4rem auto;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  position: relative;
+  /* position: relative; */
 }
